// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Toggle > should render 1`] = `
<DocumentFragment>
  <label
    class="css-xklln0"
  >
    <input
      class="css-1r71f0z toggle-input"
      type="checkbox"
    />
    <div
      class="css-d8rk4r toggle-handle"
    >
      <span
        class="css-f7w6ps"
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle > should render always on 1`] = `
<DocumentFragment>
  <label
    class="css-xklln0"
  >
    <input
      class="css-1r71f0z toggle-input"
      type="checkbox"
    />
    <div
      class="css-d8rk4r toggle-handle"
    >
      <span
        class="css-qdjttl"
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle > should render disabled 1`] = `
<DocumentFragment>
  <label
    class="css-irspe1"
    disabled=""
  >
    <input
      class="css-1r71f0z toggle-input"
      disabled=""
      type="checkbox"
    />
    <div
      class="css-d8rk4r toggle-handle"
    >
      <span
        class="css-1nye29f"
        disabled=""
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle > should render small 1`] = `
<DocumentFragment>
  <label
    class="css-1uxo3sa"
  >
    <input
      class="css-1r71f0z toggle-input"
      type="checkbox"
    />
    <div
      class="css-10kxbe9 toggle-handle"
    >
      <span
        class="css-10rchj6"
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle > should toggle checked 1`] = `
<DocumentFragment>
  <label
    class="css-xklln0"
  >
    <input
      class="css-1r71f0z toggle-input"
      type="checkbox"
    />
    <div
      class="css-d8rk4r toggle-handle"
    >
      <span
        class="css-f7w6ps"
      />
    </div>
  </label>
</DocumentFragment>
`;
